[package]
name = "frost-snake-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
az = "1"
csv = "1"
fixed = { version = "1", features = ["std"] }
fixed-macro = "1"
im = "15"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
