[package]
name = "frost-snake-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
az = "1"
csv = "1"
fixed = { version = "1", features = ["std"] }
fixed-macro = "1"
im-rc = "15"
itoa = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
criterion = "0.3"
glob = "0.3.0"
csv-diff = "0.1.0-alpha"
eyre = "0.6.8"


[[bench]]
name = "execution_bench"
harness = false
